Increase teaser max height to prevent text cutoff

--- a/packages/shared/scss/components/_node.scss
+++ b/packages/shared/scss/components/_node.scss
@@ -36,6 +36,12 @@
       font-size: 16px;
     }
 
+    &--teaser {
+      a {
+        max-height: 4.5rem;
+      }
+    }
+
     &--spec-guide-link-button + &--spec-guide-link-button {
       margin-top: .75rem;
     }
